# Marketplace

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  agent.py  aibi_storage.db  docker-compose.dev.yml  docker-compose.homolog.yml  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
Front/: AIBI.html  ds.html  index.html  index2.html  index3.html
env/: dev.env.example  homolog.env.example  prod.env.example
nginx/: default.conf
prompts/: knowledge.JSON  prompt.md
