[project]
name = "marketplace-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno>=2.6.8",
    "duckdb>=1.5.3",
    "duckdb-engine>=0.17.0",
    "fastapi>=0.136.1",
    "openai>=2.37.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]
